examples/test/testpolicy14520.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14520
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key43: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value8
      podSelector:
        matchLabels:
          key48: value48
          key21: value17
          key4: value44
